Revert "Quick fix for overflow"
This reverts commit 8e8125c33f58ee24e33a15846dab89d963b34da1.

--- a/css/main.sass
+++ b/css/main.sass
@@ -48,7 +48,7 @@ h2
     // Left Half
     .left
         +flex-column-nowrap
-        overflow: hidden
+        overflow: scroll
         
         // Container for night mode button
         .button-container
